--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 </head>
 <body>
 
+    <div class="container">
+        <h1 id = "main-heading">Favourite Movie
+            Franchise
+        </h1>
+        <ul>
+            <li class="list-items">The Matrix</li>
+            <li class="list-items">Star Wars</li>
+            <li class="list-items">Harry Potter</li>
+            <li class="list-items">Lord of the Rings</li>
+            <li class="list-items">Marvels</li>
+        </ul>
+    </div>
+
+<script src="script.js"></script>
 </body>
 </html>
